[gd_scene load_steps=2 format=2]

[ext_resource path="res://Network.gd" type="Script" id=1]

[node name="Network" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Signup" type="Button" parent="."]
margin_left = 192.0
margin_top = 192.0
margin_right = 384.0
margin_bottom = 256.0
text = "Signup"

[node name="Login" type="Button" parent="."]
margin_left = 407.0
margin_top = 193.0
margin_right = 599.0
margin_bottom = 257.0
text = "Login"

[node name="GetScore" type="Button" parent="."]
margin_left = 192.0
margin_top = 320.0
margin_right = 384.0
margin_bottom = 384.0
text = "Get score"

[node name="ChangeScene" type="Button" parent="."]
margin_left = 44.0
margin_top = 320.0
margin_right = 155.0
margin_bottom = 384.0
text = "Change Scene"

[node name="AddScore" type="Button" parent="."]
anchor_right = 0.071
anchor_bottom = 0.065
margin_left = 192.0
margin_top = 448.0
margin_right = 311.296
margin_bottom = 473.0
text = "Add score"

[node name="Score" type="LineEdit" parent="."]
margin_left = 640.0
margin_top = 448.0
margin_right = 832.0
margin_bottom = 512.0

[node name="PlayerName" type="LineEdit" parent="."]
margin_left = 521.0
margin_top = 318.0
margin_right = 713.0
margin_bottom = 382.0

[node name="Password" type="LineEdit" parent="."]
margin_left = 730.0
margin_top = 317.0
margin_right = 922.0
margin_bottom = 381.0

[node name="ID" type="LineEdit" parent="."]
margin_left = 722.0
margin_top = 194.0
margin_right = 914.0
margin_bottom = 258.0

[node name="LabScore" type="Label" parent="."]
margin_left = 512.0
margin_top = 448.0
margin_right = 614.0
margin_bottom = 513.0
text = "Score"
valign = 1

[node name="LabName" type="Label" parent="."]
margin_left = 414.0
margin_top = 318.0
margin_right = 516.0
margin_bottom = 383.0
text = "Player name"
valign = 1

[node name="LabID" type="Label" parent="."]
margin_left = 629.0
margin_top = 194.0
margin_right = 731.0
margin_bottom = 259.0
text = "Player ID"
valign = 1

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 128.0
margin_top = 16.0
margin_right = 896.0
margin_bottom = 176.0

[connection signal="pressed" from="Signup" to="." method="_signup"]
[connection signal="pressed" from="Login" to="." method="_login"]
[connection signal="pressed" from="GetScore" to="." method="_get_score"]
[connection signal="pressed" from="ChangeScene" to="." method="_change_scene"]
[connection signal="pressed" from="AddScore" to="." method="_submit_score"]
