[gd_scene load_steps=49 format=2]

[ext_resource path="res://Assets/Bil.png" type="Texture" id=1]
[ext_resource path="res://Assets/Untitled_Artwork 11.png" type="Texture" id=2]
[ext_resource path="res://Assets/Levelbane/kørekortknap.png" type="Texture" id=3]
[ext_resource path="res://Assets/Levelbane/blaaprik.png" type="Texture" id=4]
[ext_resource path="res://Assets/Levelbane/Untitled_Artwork 10.png" type="Texture" id=5]
[ext_resource path="res://Assets/Font/nexa/Nexa-Heavy.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Kørekort.png" type="Texture" id=7]
[ext_resource path="res://Network.gd" type="Script" id=8]
[ext_resource path="res://Assets/Font/harbor-nebula-demo-version/Harbor Nebula DEMO VERSION.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/i_-_M.png" type="Texture" id=10]
[ext_resource path="res://Assets/ID_-_M (1).png" type="Texture" id=11]
[ext_resource path="res://Assets/Skilt_-_M (2)-kopi.png" type="Texture" id=12]
[ext_resource path="res://Assets/Bane_-_M (1).png" type="Texture" id=13]
[ext_resource path="res://Assets/i_-_S.png" type="Texture" id=14]
[ext_resource path="res://Assets/Lv1 knapper/level2/knap2overhaling l-2.jpg" type="Texture" id=15]
[ext_resource path="res://Assets/Lv1 knapper/level1/baneknap2-removebg-preview.png" type="Texture" id=16]
[ext_resource path="res://Assets/Lv1 knapper/level2/knap2overhaling.png" type="Texture" id=17]
[ext_resource path="res://Assets/Lv1 knapper/level1/baneknap-removebg-preview.png" type="Texture" id=18]
[ext_resource path="res://Assets/Lv1 knapper/level1/baneknap3-removebg-preview.png" type="Texture" id=19]
[ext_resource path="res://Assets/Lv1 knapper/level2/Knap1bane2.png" type="Texture" id=20]
[ext_resource path="res://Assets/information til spillet.png" type="Texture" id=21]
[ext_resource path="res://Assets/close.png" type="Texture" id=22]
[ext_resource path="res://Assets/close-kopi 2.png" type="Texture" id=23]
[ext_resource path="res://Assets/Lv1 knapper/level2/knap3overhaling.png" type="Texture" id=24]
[ext_resource path="res://Assets/Lv1 knapper/level1/baneknap2.png" type="Texture" id=25]
[ext_resource path="res://Assets/Lv1 knapper/level2/knap3overhaling l-2.jpg" type="Texture" id=26]
[ext_resource path="res://Assets/Lv1 knapper/level2/Knap1bane2-2.jpg" type="Texture" id=27]
[ext_resource path="res://Assets/Lv1 knapper/level1/baneknap3.png" type="Texture" id=28]
[ext_resource path="res://Assets/Lv1 knapper/level1/baneknap.png" type="Texture" id=29]
[ext_resource path="res://Assets/Lv1 knapper/level1/lock.png" type="Texture" id=30]
[ext_resource path="res://Assets/yesstar.png" type="Texture" id=31]
[ext_resource path="res://Assets/nostar.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sounds/videogame-menu-button-click.wav" type="AudioStream" id=33]
[ext_resource path="res://Assets/help.png" type="Texture" id=34]
[ext_resource path="res://Assets/left-arrow-symbol-characters-sticker-removebg-preview.png" type="Texture" id=35]
[ext_resource path="res://Assets/bs/close.png" type="Texture" id=36]
[ext_resource path="res://Assets/bs/close-kopi 2.png" type="Texture" id=37]

[sub_resource type="DynamicFont" id=25]
size = 19
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=26]
size = 110
font_data = ExtResource( 9 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 681, 562 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "bane 1"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 2, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 680, 563 ), Vector2( 681, 326 ), Vector2( 693, 256 ), Vector2( 721, 241 ), Vector2( 785, 217 ), Vector2( 866, 228 ), Vector2( 888, 232 ), Vector2( 894, 243 ), Vector2( 883, 245 ) ]
}

[sub_resource type="Animation" id=30]
resource_name = "bane 1.1"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.3, 1.8, 2.2, 2.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 536, 296 ), Vector2( 604, 374 ), Vector2( 799, 381 ), Vector2( 871, 363 ), Vector2( 909, 326 ), Vector2( 914, 287 ), Vector2( 894, 243 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "bane 2"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.9, 1.1, 1.4, 1.7, 1.9, 2.1, 2.3, 2.5, 2.7, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 681, 562 ), Vector2( 685, 314 ), Vector2( 696, 249 ), Vector2( 783, 220 ), Vector2( 885, 239 ), Vector2( 914, 278 ), Vector2( 913, 308 ), Vector2( 894, 337 ), Vector2( 861, 365 ), Vector2( 825, 379 ), Vector2( 634, 380 ), Vector2( 595, 373 ), Vector2( 564, 352 ), Vector2( 535, 299 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "bane 2.1"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1.1, 1.4, 1.9, 2.3, 2.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 894, 243 ), Vector2( 840, 216 ), Vector2( 752, 224 ), Vector2( 712, 248 ), Vector2( 680, 288 ), Vector2( 684, 379 ), Vector2( 608, 376 ), Vector2( 560, 352 ), Vector2( 536, 296 ) ]
}

[sub_resource type="DynamicFont" id=27]
size = 17
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=28]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=31]
size = 25
outline_color = Color( 0.101961, 0.101961, 0.101961, 1 )
font_data = ExtResource( 6 )

[node name="levelmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Baggrund" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="lavstop" type="Sprite" parent="."]
position = Vector2( 144, 382 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 5 )

[node name="Label2" type="Label" parent="."]
margin_left = 85.0
margin_top = 346.0
margin_right = 209.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 25 )
text = "Til 
teoriprøven"
align = 1

[node name="højstop" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 23.0
margin_right = 340.0
margin_bottom = 345.0
rect_scale = Vector2( 0.45, 0.45 )
texture_normal = ExtResource( 5 )

[node name="Label3" type="Label" parent="."]
margin_left = 51.0
margin_top = 68.0
margin_right = 138.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 25 )
text = "Fif til 
prøverne"
align = 1

[node name="mellemstop" type="TextureButton" parent="."]
margin_left = 154.0
margin_top = 157.0
margin_right = 474.0
margin_bottom = 479.0
rect_scale = Vector2( 0.45, 0.45 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )

[node name="tekspg" type="Label" parent="."]
margin_left = 168.0
margin_top = 200.0
margin_right = 292.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 25 )
text = "Tekniske 
spørgsmål"
align = 1

[node name="kort" type="TextureButton" parent="."]
margin_left = 933.0
margin_right = 1573.0
margin_bottom = 640.0
rect_rotation = 0.6
rect_scale = Vector2( 0.13, 0.13 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )

[node name="overhaling" type="TextureButton" parent="."]
margin_left = 470.0
margin_top = 235.0
margin_right = 1110.0
margin_bottom = 875.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )

[node name="vp2" type="Label" parent="overhaling"]
margin_left = 35.0
margin_top = 265.0
margin_right = 615.0
margin_bottom = 369.0
custom_fonts/font = SubResource( 26 )
text = "Overhaling"

[node name="vigepligt" type="TextureButton" parent="."]
margin_left = 826.0
margin_top = 182.0
margin_right = 1478.0
margin_bottom = 828.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )

[node name="vp" type="Label" parent="vigepligt"]
margin_left = 115.0
margin_top = 275.0
margin_right = 575.0
margin_bottom = 379.0
custom_fonts/font = SubResource( 26 )
text = "Vigepligt"

[node name="lillebil" type="AnimatedSprite" parent="."]
position = Vector2( 681, 562 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="lillebil"]
anims/RESET = SubResource( 22 )
"anims/bane 1" = SubResource( 23 )
"anims/bane 1.1" = SubResource( 30 )
"anims/bane 2" = SubResource( 24 )
"anims/bane 2.1" = SubResource( 29 )

[node name="kort2" type="Sprite" parent="."]
visible = false
position = Vector2( 526, 302 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )

[node name="point" type="Label" parent="kort2"]
margin_left = -2.0
margin_top = 70.6667
margin_right = 38.0
margin_bottom = 84.6667
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="points" type="Label" parent="kort2"]
margin_left = 24.0
margin_top = 71.3333
margin_right = 64.0
margin_bottom = 102.333
custom_colors/font_color = Color( 0.380392, 0.376471, 0.376471, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "/72
"
align = 1
valign = 1

[node name="Label2" type="Label" parent="kort2"]
margin_left = 35.3333
margin_top = -20.0
margin_right = 645.333
margin_bottom = 345.0
custom_fonts/font = SubResource( 27 )
text = "Vigepligt"

[node name="un" type="Label" parent="kort2"]
margin_left = -3.33334
margin_top = -34.0
margin_right = 103.667
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Timer1" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="bane1" type="TextureRect" parent="."]
visible = false
margin_left = 115.0
margin_top = 55.0
margin_right = 1139.0
margin_bottom = 655.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 21 )

[node name="titel" type="Label" parent="bane1"]
margin_left = 196.25
margin_top = 53.75
margin_right = 796.25
margin_bottom = 157.75
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "Bane: Vigepligt"
align = 1

[node name="b1" type="TextureButton" parent="bane1"]
margin_left = 76.25
margin_top = 251.25
margin_right = 326.25
margin_bottom = 458.25
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 25 )

[node name="b2" type="TextureButton" parent="bane1"]
margin_left = 386.25
margin_top = 247.5
margin_right = 636.25
margin_bottom = 457.5
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 28 )

[node name="b3" type="TextureButton" parent="bane1"]
margin_left = 689.25
margin_top = 247.25
margin_right = 939.25
margin_bottom = 454.25
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 29 )

[node name="lock" type="TextureRect" parent="bane1"]
margin_left = 446.25
margin_top = 281.25
margin_right = 767.25
margin_bottom = 642.25
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 30 )

[node name="lock2" type="TextureRect" parent="bane1"]
margin_left = 748.75
margin_top = 273.75
margin_right = 1069.75
margin_bottom = 634.75
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 30 )

[node name="close1" type="TextureButton" parent="bane1"]
margin_left = 896.25
margin_top = 41.25
margin_right = 1330.25
margin_bottom = 469.25
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 23 )

[node name="sn1" type="TextureRect" parent="bane1"]
margin_left = 270.0
margin_top = 423.75
margin_right = 320.0
margin_bottom = 473.75
texture = ExtResource( 32 )

[node name="sn2" type="TextureRect" parent="bane1"]
margin_left = 225.0
margin_top = 423.75
margin_right = 275.0
margin_bottom = 473.75
texture = ExtResource( 32 )

[node name="sn3" type="TextureRect" parent="bane1"]
margin_left = 180.0
margin_top = 423.75
margin_right = 230.0
margin_bottom = 473.75
texture = ExtResource( 32 )

[node name="s3" type="TextureRect" parent="bane1"]
visible = false
margin_left = 180.0
margin_top = 423.75
margin_right = 230.0
margin_bottom = 473.75
texture = ExtResource( 31 )

[node name="s2" type="TextureRect" parent="bane1"]
visible = false
margin_left = 225.0
margin_top = 423.75
margin_right = 275.0
margin_bottom = 473.75
texture = ExtResource( 31 )

[node name="s1" type="TextureRect" parent="bane1"]
visible = false
margin_left = 270.0
margin_top = 423.75
margin_right = 320.0
margin_bottom = 473.75
texture = ExtResource( 31 )

[node name="bane2" type="TextureRect" parent="."]
visible = false
margin_left = 115.0
margin_top = 55.0
margin_right = 1139.0
margin_bottom = 655.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 21 )

[node name="titel" type="Label" parent="bane2"]
margin_left = 196.25
margin_top = 53.75
margin_right = 796.25
margin_bottom = 157.75
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "Bane: Overhaling"
align = 1

[node name="b1" type="TextureButton" parent="bane2"]
margin_left = 76.25
margin_top = 251.25
margin_right = 326.25
margin_bottom = 458.25
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 20 )

[node name="b2" type="TextureButton" parent="bane2"]
margin_left = 386.25
margin_top = 247.5
margin_right = 636.25
margin_bottom = 457.5
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )

[node name="b3" type="TextureButton" parent="bane2"]
margin_left = 689.25
margin_top = 247.25
margin_right = 939.25
margin_bottom = 454.25
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 24 )

[node name="lock" type="TextureRect" parent="bane2"]
margin_left = 446.25
margin_top = 281.25
margin_right = 767.25
margin_bottom = 642.25
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 30 )

[node name="lock2" type="TextureRect" parent="bane2"]
margin_left = 748.75
margin_top = 273.75
margin_right = 1069.75
margin_bottom = 634.75
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 30 )

[node name="close2" type="TextureButton" parent="bane2"]
margin_left = 896.25
margin_top = 41.25
margin_right = 1330.25
margin_bottom = 469.25
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 23 )

[node name="sn1" type="TextureRect" parent="bane2"]
margin_left = 270.0
margin_top = 423.75
margin_right = 320.0
margin_bottom = 473.75
texture = ExtResource( 32 )

[node name="sn2" type="TextureRect" parent="bane2"]
margin_left = 225.0
margin_top = 423.75
margin_right = 275.0
margin_bottom = 473.75
texture = ExtResource( 32 )

[node name="sn3" type="TextureRect" parent="bane2"]
margin_left = 180.0
margin_top = 423.75
margin_right = 230.0
margin_bottom = 473.75
texture = ExtResource( 32 )

[node name="s3" type="TextureRect" parent="bane2"]
visible = false
margin_left = 180.0
margin_top = 423.75
margin_right = 230.0
margin_bottom = 473.75
texture = ExtResource( 31 )

[node name="s2" type="TextureRect" parent="bane2"]
visible = false
margin_left = 225.0
margin_top = 423.75
margin_right = 275.0
margin_bottom = 473.75
texture = ExtResource( 31 )

[node name="s1" type="TextureRect" parent="bane2"]
visible = false
margin_left = 270.0
margin_top = 423.75
margin_right = 320.0
margin_bottom = 473.75
texture = ExtResource( 31 )

[node name="logud" type="Button" parent="."]
margin_left = 7.0
margin_top = 6.0
margin_right = 61.0
margin_bottom = 26.0
text = "Log ud"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )

[node name="Sprite" type="TextureRect" parent="."]
margin_left = 840.0
margin_top = 496.0
margin_right = 1530.0
margin_bottom = 858.0
rect_rotation = 19.8
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 35 )

[node name="Label" type="Label" parent="."]
margin_left = 840.0
margin_top = 488.0
margin_right = 971.0
margin_bottom = 521.0
rect_rotation = 6.6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 31 )
text = "Læs tutorial"

[node name="help" type="TextureRect" parent="."]
visible = false
margin_left = 163.0
margin_top = 79.0
margin_right = 863.0
margin_bottom = 529.0
texture = ExtResource( 34 )

[node name="close3" type="TextureButton" parent="help"]
margin_left = 637.0
margin_top = 9.0
margin_right = 687.0
margin_bottom = 58.0
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 37 )
texture_hover = ExtResource( 37 )

[node name="i" type="TextureButton" parent="."]
margin_left = 961.0
margin_top = 537.0
margin_right = 1370.0
margin_bottom = 940.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )

[connection signal="pressed" from="mellemstop" to="." method="_on_mellemstop_pressed"]
[connection signal="pressed" from="kort" to="." method="_get_score"]
[connection signal="pressed" from="overhaling" to="." method="_on_overhailing_pressed"]
[connection signal="pressed" from="vigepligt" to="." method="_on_vigepligt_pressed"]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="bane1/b1" to="." method="_on_b1_pressed"]
[connection signal="pressed" from="bane1/close1" to="." method="_on_close1_pressed"]
[connection signal="pressed" from="bane2/b1" to="." method="_on_b11_pressed"]
[connection signal="pressed" from="bane2/close2" to="." method="_on_close2_pressed"]
[connection signal="pressed" from="logud" to="." method="_on_logud_pressed"]
[connection signal="pressed" from="help/close3" to="." method="_on_close3_pressed"]
[connection signal="pressed" from="i" to="." method="_on_i_pressed"]
