[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/lillepil.png" type="Texture" id=1]
[ext_resource path="res://Assets/Font/harbor-nebula-demo-version/Harbor Nebula DEMO VERSION.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/nypedal.png" type="Texture" id=3]
[ext_resource path="res://Network.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sounds/videogame-menu-button-click.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 2 )

[node name="Node2D" type="Control"]
script = ExtResource( 4 )

[node name="pedaler" type="TextureRect" parent="."]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="signup" type="Label" parent="."]
margin_left = 170.0
margin_top = 231.0
margin_right = 259.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 1 )
text = "Signup"

[node name="login" type="Label" parent="."]
margin_left = 472.0
margin_top = 239.0
margin_right = 561.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 1 )
text = "Login"

[node name="bnsu" type="LineEdit" parent="."]
margin_left = 142.0
margin_top = 284.0
margin_right = 282.0
margin_bottom = 319.0

[node name="ksu" type="LineEdit" parent="."]
margin_left = 142.0
margin_top = 340.0
margin_right = 282.0
margin_bottom = 375.0

[node name="create" type="Button" parent="."]
margin_left = 184.0
margin_top = 389.0
margin_right = 237.0
margin_bottom = 409.0
text = "Create"

[node name="k" type="Label" parent="."]
margin_left = 142.0
margin_top = 324.0
margin_right = 182.0
margin_bottom = 338.0
text = "Kode"

[node name="bnli" type="LineEdit" parent="."]
margin_left = 432.0
margin_top = 297.0
margin_right = 568.0
margin_bottom = 329.0

[node name="k2" type="Label" parent="."]
margin_left = 432.0
margin_top = 339.0
margin_right = 568.0
margin_bottom = 371.0
text = "Kode"

[node name="bn2" type="Label" parent="."]
margin_left = 432.0
margin_top = 280.0
margin_right = 504.0
margin_bottom = 294.0
text = "Brugernavn"

[node name="Button2" type="Button" parent="."]
margin_left = 472.0
margin_top = 400.0
margin_right = 537.0
margin_bottom = 424.0
text = "Let's go!"

[node name="kli" type="LineEdit" parent="."]
margin_left = 432.0
margin_top = 356.0
margin_right = 568.0
margin_bottom = 388.0

[node name="pil" type="TextureRect" parent="."]
visible = false
margin_left = 286.0
margin_top = 279.0
margin_right = 461.0
margin_bottom = 402.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="pilli" type="Label" parent="pil"]
margin_left = 67.5
margin_top = 62.5
margin_right = 113.5
margin_bottom = 76.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Login :)"

[node name="bn" type="Label" parent="."]
margin_left = 142.0
margin_top = 267.0
margin_right = 214.0
margin_bottom = 281.0
text = "Brugernavn"

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
margin_left = 233.0
margin_top = 477.0
margin_right = 435.0
margin_bottom = 508.0
highlight_all_occurrences = true

[node name="status" type="Label" parent="."]
margin_left = 234.0
margin_top = 441.0
margin_right = 416.0
margin_bottom = 472.0
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="create" to="." method="_signup"]
[connection signal="pressed" from="Button2" to="." method="_login"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
